objects/AcctSeed__Bank_Disbursement__c/AcctSeed__Bank_Disbursement__c.object-meta.xml
<CustomObject>
    <label>Bank Disbursement</label>
    <nameField>
        <displayFormat>BD-{00000}</displayFormat>
        <label>Bank Disbursement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Disbursements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>