objects/AcctSeed__Bank_Disbursement__c/fields/AcctSeed__AS_Pay_Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__AS_Pay_Type__c</fullName>
    <label>Payment Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AcctSeed__AS_Pay_Type</valueSetName>
    </valueSet>
</CustomField>