objects/AcctSeed__Bank_Disbursement__c/fields/AcctSeed__Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account</label>
    <referenceTo>AcctSeed__Bank_Account__c</referenceTo>
    <relationshipLabel>Bank Disbursements</relationshipLabel>
    <relationshipName>Bank_Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>