objects/AcctSeed__Bank_Disbursement__c/fields/AcctSeed__Check_Number__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Check_Number__c</fullName>
    <label>Check Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>