objects/AcctSeed__Bank_Disbursement__c/fields/AcctSeed__Payment_Services_Id__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payment_Services_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Payment Services Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>