objects/AcctSeed__Bank_Disbursement__c/fields/AcctSeed__Status__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>